fix: z-index of resend button

--- a/NetworkPlus/style/main.css
+++ b/NetworkPlus/style/main.css
@@ -113,6 +113,7 @@ pre {
 }
 
 .resend {
+  z-index: 1;
   position: fixed !important;
   right: 80px !important;
   bottom: 80px !important;
